# kiro

./: .gitignore  README.md  pyproject.toml  test1.py  test_context_engine.ipynb  topics.md
agents/: README.md  VideoTopicBuffer.py  __init__.py  __main__.py  agent_processor.py  base.py  bot.py  client.py  logger.py  storage.py  test.py  video_topic_buffer.py
agents/0_legacy/communications/: __init__.py  receiver.py
agents/0_legacy/graph/: __init__.py  nodes.py  prompts.py  schemas.py
agents/communications/: receiver.py  writer.py
agents/communications/test/: test_receiver.py
agents/deep_research/: graph.py  nodes.py  planner.py  prompts.py  state.py
agents/graph/: nodes.py  state.py  workflow.py
agents/graph/test/: test_nodes.py
agents/personal/: graph.py  nodes.py  prompts.py  state.py
agents/shared/: __init__.py  checkpointer.py  logging.py  memory.py  models.py  storage.py  tools.py  utils.py  video_buffer.py
agents/supervisor/: grpah.py  nodes.py  prompts.py  state.py
agents/test/: test_bot_import_safety.py  test_video_topic_buffer.py
agents/tools/: __init__.py  basic_tools.py
communication_bus/: __init__.py  __main__.py  inmemory_bus.py  logger.py
communication_bus/test/: test_inmemory_bus.py
context_engine/: __init__.py  __main__.py  bm25_encoder.json  config.py  engine.py  rag.py  text.py  types.py
context_engine/chunkers/: __init__.py  __main__.py  base.py  fixed.py  markdown.py  recursive.py  schema.py  semantic.py
context_engine/chunkers/test/: test_fixed.py  test_schema.py
context_engine/embedders/: __init__.py  __main__.py  base.py  hash.py  openai.py
context_engine/embedders/test/: test_base.py  test_openai.py
context_engine/evals/: __init__.py  metrics.py  runner.py  types.py
context_engine/evals/test/: test_metrics.py  test_runner.py  test_types.py
context_engine/loaders/: __init__.py  __main__.py  auto.py  base.py  pdf_markdown.py  schema.py  utils.py
context_engine/loaders/test/: test_auto.py  test_base.py  test_schema.py
context_engine/notebooks/: basic_character_chunking.ipynb  extraction.ipynb  pdf_to_markdown.ipynb  reranking.ipynb  semantic_chunking.ipynb  structured_document.json
context_engine/stores/: __init__.py  __main__.py  base.py  chroma.py
context_engine/summarizers/: __init__.py  base.py  openai.py
context_engine/test/: test_engine_injection.py
context_engine/tests/: test_context_engine.ipynb
conversation_bot/: long-term-memory.ipynb  main1.py  main2.py
data/: coffee_processing_parsed.json
data/extracted/SampleContract/: SampleContract.md
evaluations/: rag_evaluation_ragas.ipynb
kiro/: __main__.py  adapter.py  adapter_cli.py  audio_player.py  microphone.py
kiro/tests/: test_adapter_audio.py  test_audio_player.py
live_interaction/: __init__.py  __main__.py  face.html  logger.py  ui_service.py
live_interaction/test/: test_import_safety.py
ml/: multiple_linear_regression.ipynb  simple_linear_regression.ipynb
orchestrator/: __init__.py  __main__.py  runner.py  types.py
orchestrator/test/: test_runner.py
rag_methods/: data_preprocessing.py  recursive_character_chunking.ipynb  reranking.ipynb  semantic_chunking.ipynb  utils.py
rag_methods/preprocessing/: data_preprocessing.py
shared/: logging.py
stt/: __init__.py  __main__.py  base.py  engine.py  schema.py
stt/providers/: sarvam.py
stt_audio_processor/: __init__.py  __main__.py  fakes.py  main.py  stt_processor.py
stt_audio_processor/src/: audio_handler.py  transcription_providers.py  voice_assistant.py  wake_word_detector.py
stt_audio_processor/test/: test_stt_processor.py
stt_audio_processor/utils/: config.py  logger.py
tests/: test_context_engine.ipynb
tts/: __init__.py  __main__.py  base.py  engine.py
tts/providers/: __init__.py  sarvam.py
tts_audio_processor/: __init__.py  __main__.py  audio_player.py  fakes.py  logger.py  text_reader.py  tts_processor.py  tts_service.py
tts_audio_processor/test/: test_tts_processor.py
vision/: README.md  __init__.py  __main__.py  object_detection.py  pipeline.py
vision/common/: README.md  client.py  env.py  logging.py  paths.py  types.py
vision/detection/: README.md  __init__.py  __main__.py  base.py  client.py  factory.py  yolo.py
vision/tracking/: README.md  __init__.py  __main__.py  base.py  client.py  dummy.py  factory.py  yolo.py
vision/vlm/: README.md  __init__.py  __main__.py  base.py  client.py  factory.py  openai.py
