[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "chromadb>=1.4.1",
    "cohere>=6.1.0",
    "docling>=2.93.0",
    "elevenlabs>=2.44.0",
    "langchain>=1.2.7",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.7",
    "langchain-experimental>=0.4.1",
    "langchain-openai>=1.1.7",
    "langchain-text-splitters>=1.1.0",
    "liteparse>=1.2.1",
    "markdowncleaner>=0.3.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "openai>=2.15.0",
    "pinecone>=8.1.2",
    "pinecone-text>=0.11.0",
    "pypdf2>=3.0.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "python-docx>=1.2.0",
    "ragas>=0.4.3",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sounddevice>=0.5.5",
    "unstructured[docx,pdf]>=0.21.5",
]

[tool.setuptools.packages.find]
include = ["context_engine*"]
