[project]
name = "kiro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.3.0",
    "ipynb>=0.5.1",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.7",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "opencv-python>=4.13.0.92",
    "pydub>=0.25.1",
    "python-dotenv>=1.2.1",
    "sarvamai>=0.1.28",
    "sounddevice>=0.5.5",
    "tavily>=1.1.0",
    "ultralytics>=8.4.99",
]

[tool.setuptools.packages.find]
include = [
    "agents*",
    "communication_bus*",
    "context_engine*",
    "kiro*",
    "live_interaction*",
    "orchestrator*",
    "shared*",
    "stt_audio_processor*",
    "tts_audio_processor*",
    "vision*",
]

[project.optional-dependencies]
agents = [
    "aiosqlite>=0.21.0",
    "langchain>=1.2.7",
    "langchain-core>=1.2.7",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.7",
]
context = [
    "chromadb>=1.4.1",
    "cohere>=6.1.0",
    "docling>=2.93.0",
    "langchain>=1.2.7",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.7",
    "langchain-experimental>=0.4.1",
    "langchain-openai>=1.1.7",
    "langchain-text-splitters>=1.1.0",
    "liteparse>=1.2.1",
    "markdowncleaner>=0.3.1",
    "matplotlib>=3.10.8",
    "pinecone>=8.1.2",
    "pinecone-text>=0.11.0",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "ragas>=0.4.3",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "unstructured[docx,pdf]>=0.21.5",
]
stt = [
    "numpy>=2.4.1",
    "pyaudio>=0.2.14",
    "sarvamai>=0.1.0",
    "sounddevice>=0.5.5",
]
tts = [
    "elevenlabs>=2.44.0",
    "openai>=2.15.0",
    "pydub>=0.25.1",
    "simpleaudio>=1.0.4",
]
ui = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
]
orchestrator = []
vision = [
    "langchain>=1.2.7",
    "langchain-core>=1.2.7",
    "langchain-openai>=1.1.7",
    "lap>=0.5.0",
    "filterpy>=1.4.5",
]
dev = [
    "aiosqlite>=0.21.0",
    "chromadb>=1.4.1",
    "cohere>=6.1.0",
    "docling>=2.93.0",
    "elevenlabs>=2.44.0",
    "fastapi>=0.115.0",
    "langchain>=1.2.7",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.7",
    "langchain-experimental>=0.4.1",
    "langchain-openai>=1.1.7",
    "langchain-text-splitters>=1.1.0",
    "langgraph>=1.0.7",
    "liteparse>=1.2.1",
    "markdowncleaner>=0.3.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "openai>=2.15.0",
    "pinecone>=8.1.2",
    "pinecone-text>=0.11.0",
    "pyaudio>=0.2.14",
    "pydub>=0.25.1",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ragas>=0.4.3",
    "rank-bm25>=0.2.2",
    "sarvamai>=0.1.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "simpleaudio>=1.0.4",
    "sounddevice>=0.5.5",
    "unstructured[docx,pdf]>=0.21.5",
    "uvicorn>=0.34.0",
]
all = [
    "aiosqlite>=0.21.0",
    "chromadb>=1.4.1",
    "cohere>=6.1.0",
    "docling>=2.93.0",
    "elevenlabs>=2.44.0",
    "fastapi>=0.115.0",
    "langchain>=1.2.7",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.7",
    "langchain-experimental>=0.4.1",
    "langchain-openai>=1.1.7",
    "langchain-text-splitters>=1.1.0",
    "langgraph>=1.0.7",
    "liteparse>=1.2.1",
    "markdowncleaner>=0.3.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "openai>=2.15.0",
    "pinecone>=8.1.2",
    "pinecone-text>=0.11.0",
    "pyaudio>=0.2.14",
    "pydub>=0.25.1",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "ragas>=0.4.3",
    "rank-bm25>=0.2.2",
    "sarvamai>=0.1.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "simpleaudio>=1.0.4",
    "sounddevice>=0.5.5",
    "unstructured[docx,pdf]>=0.21.5",
    "uvicorn>=0.34.0",
]
